syntax = "proto3";

package members;

option go_package = "/members";

message Member {
    string id = 1;
    string name = 2;
    string email = 3;
}

message GetMemberRequest {
    string id = 1;
}

message GetMemberResponse {
    Member member = 1;
}

message CreateMemberRequest {
    string name = 1;
    string email = 2;
}

message CreateMemberResponse {
    Member member = 1;
}

message UpdateMemberRequest {
    string id = 1;
    string name = 2;
    string email = 3;
}

message UpdateMemberResponse {
    Member member = 1;
}

message DeleteMemberRequest {
    string id = 1;
}

message DeleteMemberResponse {
    Member member = 1;
}

service MembersService {
    rpc GetMember(GetMemberRequest) returns (GetMemberResponse);
    rpc CreateMember(CreateMemberRequest) returns (CreateMemberResponse);
    rpc UpdateMember(UpdateMemberRequest) returns (UpdateMemberResponse);
    rpc DeleteMember(DeleteMemberRequest) returns (DeleteMemberResponse);
}